--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-local-authentication": "^14.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
